# axiom

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  PROGRESS.md  docker-compose.yml
.github/workflows/: deploy.yml
bindings/go/: axiom.go  axiom.h  axiom_test.go  go.mod
bindings/go/rust/: Cargo.toml
bindings/go/rust/src/: lib.rs
bindings/java/: pom.xml
bindings/java/rust/: Cargo.toml
bindings/java/rust/src/: lib.rs
bindings/java/src/main/java/io/axiom/: AxiomEngine.java  AxiomException.java  EvaluationContext.java  EvaluationRequest.java  EvaluationResult.java
bindings/java/src/test/java/io/axiom/: AxiomEngineTest.java
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node/src/: lib.rs
bindings/node/tests/: engine.test.js
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/axiom_rules/: __init__.py  aio.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_async_engine.py  test_engine.py
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: main.rs
crates/axiom-cli/src/commands/: evaluate.rs  import_export.rs  keygen.rs  test.rs  validate.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: actions.rs  call_rule_guard.rs  error.rs  evaluator.rs  expression.rs  lib.rs  operators.rs  parser.rs  registry.rs  resolver.rs  schema.rs  strategy.rs  timeout.rs  trace.rs
crates/axiom-server/: Cargo.toml
crates/axiom-server/src/: auth.rs  config.rs  main.rs  metrics.rs  rate_limit.rs  state.rs  watch.rs  webhook.rs
crates/axiom-server/src/routes/: evaluate.rs  health.rs  import_export.rs  keys.rs  mod.rs  rules.rs  rulesets.rs
crates/axiom-server/src/storage/: mod.rs  postgres.rs  sqlite.rs
deploy/: docker-compose.ha.yml  nginx.conf
deploy/helm/axiom/: Chart.yaml  values.yaml
deploy/helm/axiom/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: axiom-architecture-v1.3.md
modules/axiom-access/: bundle.yaml
modules/axiom-compliance/: bundle.yaml
modules/axiom-ecommerce/: bundle.yaml
modules/axiom-finance/: bundle.yaml
modules/axiom-ops/: bundle.yaml
schema/: ars-v1.json
ui/: index.html  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  hooks.ts
ui/src/components/: ActionBuilder.tsx  ConditionBuilder.tsx  ConnectionStatus.tsx  Layout.tsx  RuleCard.tsx  TestPanel.tsx  TraceViewer.tsx
ui/src/pages/: Flow.tsx  RuleDetail.tsx  RuleNew.tsx  Rules.tsx  Rulesets.tsx  Settings.tsx  Tables.tsx
ui/src/store/: settings.ts
ui/src/types/: ars.ts
vscode-axiom/: .vscodeignore  language-configuration.json  package.json  tsconfig.json
vscode-axiom/schemas/: ars-bundle.schema.json  ars-rule.schema.json
vscode-axiom/snippets/: axiom-rule.code-snippets
vscode-axiom/src/: extension.ts
vscode-axiom/syntaxes/: axiom-rule-yaml-injection.tmLanguage.json  axiom-rule.tmLanguage.json
