[workspace]
members = [
    "crates/axiom-core",
    "crates/axiom-server",
    "crates/axiom-cli",
    "bindings/node",
    "bindings/java/rust",
    "bindings/python",
    "bindings/go/rust",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "Apache-2.0"
authors     = ["Axiom Contributors"]
repository  = "https://github.com/axiom-rules/axiom"

[workspace.dependencies]
# Serialisation
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"

# Error handling
thiserror   = "1"
anyhow      = "1"

# Async runtime
tokio       = { version = "1", features = ["full"] }

# HTTP
axum        = { version = "0.7", features = ["macros"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }

# Storage
sqlx        = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }

# Crypto
sha2        = "0.10"
hex         = "0.4"
rand        = "0.8"

# CLI
clap        = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest     = { version = "0.11", features = ["json"] }

# Regex
regex       = "1"

# Date / time
chrono      = { version = "0.4", features = ["serde"] }

# UUID
uuid        = { version = "1", features = ["v4", "serde"] }

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["json", "env-filter"] }
prometheus          = "0.13"

# Config
config      = "0.14"

# Misc
async-trait = "0.1"
lazy_static  = "1"

# Bindings
napi         = { version = "2", features = ["napi4", "serde-json"] }
napi-derive  = "2"
jni          = { version = "0.21", features = ["invocation"] }
pyo3         = { version = "0.23", features = ["extension-module"] }
