[package]
name        = "axiom-node"
description = "Axiom rules engine — Node.js / TypeScript binding (NAPI-RS)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
axiom-core  = { path = "../../crates/axiom-core" }
napi        = { workspace = true }
napi-derive = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[build-dependencies]
napi-build = "2"
