[package]
name        = "axiom-core"
description = "Axiom rules engine — evaluation core (no I/O)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
thiserror   = { workspace = true }
regex       = { workspace = true }
chrono      = { workspace = true }
