[package]
name        = "axiom-java"
description = "Axiom rules engine — Java JNI binding"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
axiom-core  = { path = "../../../crates/axiom-core" }
jni         = { workspace = true }
serde_json  = { workspace = true }
